--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,8 @@ hr{
     flex-direction: column;
     width: 45%;
     margin: 30px auto;
+    padding-top: 20px;
+    padding-bottom: 20px;
     
 }
 
@@ -36,18 +38,19 @@ hr{
 
 .profile-pic {
     width: 100px;
-    border-radius: 100%;
+    height: 100px;
+    border-radius: 50%;
     padding: 15px 20px;
 }
 
 .fary {
-    padding-top: 30px;
+    /* padding-top: 30px; */
 }
 
 .lola {
     height: 100px;
     object-fit: cover;
-    padding-bottom: 30px;
+    /* padding-bottom: 30px; */
 }
 
 .name {
